test/log/reduction/vsardotaccq_vv_i32_m.txt
vsardotaccq_vv_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsardotaccq_vv_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsardotaccq_vv_i32_m.c:30:105: error: unknown type name 'accum'; did you mean '_Accum'?
   30 | void vsardotaccq_vv_i32_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,accum ,int64_t *exp_result) {
      |                                                                                                         ^~~~~
      |                                                                                                         _Accum
vsardotaccq_vv_i32_m.c: In function 'main':
vsardotaccq_vv_i32_m.c:42:5: error: 'accum' undeclared (first use in this function)
   42 |     accum ;
      |     ^~~~~
vsardotaccq_vv_i32_m.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
vsardotaccq_vv_i32_m.c:48:10: error: expected ';' before 'exp_'
   48 |     accum exp_;
      |          ^~~~~
      |          ;
vsardotaccq_vv_i32_m.c:53:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   53 |     data_init_bool(src_mask, exp_src_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsardotaccq_vv_i32_m.c:58:28: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   58 |     data_init_scalar(, exp_);
      |                            ^
vsardotaccq_vv_i32_m.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vsardotaccq_vv_i32_m.c:58:5: error: 'data_init_scalar' undeclared (first use in this function)
   58 |     data_init_scalar(, exp_);
      |     ^~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m.c:61:5: warning: implicit declaration of function 'vsardotaccq_vv_i32_m_golden'; did you mean 'vsardotaccq_vv_i32_m'? [-Wimplicit-function-declaration]
   61 |     vsardotaccq_vv_i32_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     vsardotaccq_vv_i32_m
vsardotaccq_vv_i32_m.c:64:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   64 |     result = vsardotaccq_vv_i32_m(src_mask,dst_mask,a,b,c);
      |     ^~~~~~
vsardotaccq_vv_i32_m.c:64:53: error: incompatible type for argument 3 of 'vsardotaccq_vv_i32_m'
   64 |     result = vsardotaccq_vv_i32_m(src_mask,dst_mask,a,b,c);
      |                                                     ^
      |                                                     |
      |                                                     int32x16_t
In file included from vsardotaccq_vv_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2170:60: note: expected 'int64x8_t' but argument is of type 'int32x16_t'
 2170 | vsardotaccq_vv_i32_m (bool16_t __a, bool8_t __b, int64x8_t __c, int32x16_t __d, int32x16_t __e, enum ACCUM accum)
      |                                                  ~~~~~~~~~~^~~
vsardotaccq_vv_i32_m.c:64:55: error: incompatible type for argument 4 of 'vsardotaccq_vv_i32_m'
   64 |     result = vsardotaccq_vv_i32_m(src_mask,dst_mask,a,b,c);
      |                                                       ^
      |                                                       |
      |                                                       int16x32_t
In file included from vsardotaccq_vv_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2170:76: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2170 | vsardotaccq_vv_i32_m (bool16_t __a, bool8_t __b, int64x8_t __c, int32x16_t __d, int32x16_t __e, enum ACCUM accum)
      |                                                                 ~~~~~~~~~~~^~~
vsardotaccq_vv_i32_m.c:64:57: error: incompatible type for argument 5 of 'vsardotaccq_vv_i32_m'
   64 |     result = vsardotaccq_vv_i32_m(src_mask,dst_mask,a,b,c);
      |                                                         ^
      |                                                         |
      |                                                         int16x32_t
In file included from vsardotaccq_vv_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2170:92: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2170 | vsardotaccq_vv_i32_m (bool16_t __a, bool8_t __b, int64x8_t __c, int32x16_t __d, int32x16_t __e, enum ACCUM accum)
      |                                                                                 ~~~~~~~~~~~^~~
vsardotaccq_vv_i32_m.c:64:14: error: too few arguments to function 'vsardotaccq_vv_i32_m'
   64 |     result = vsardotaccq_vv_i32_m(src_mask,dst_mask,a,b,c);
      |              ^~~~~~~~~~~~~~~~~~~~
In file included from vsardotaccq_vv_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2170:1: note: declared here
 2170 | vsardotaccq_vv_i32_m (bool16_t __a, bool8_t __b, int64x8_t __c, int32x16_t __d, int32x16_t __e, enum ACCUM accum)
      | ^~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m.c:69:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   69 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vsardotaccq_vv_i32_m.c:69:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   69 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsardotaccq_vv_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsardotaccq_vv_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed